--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reducer-context",
   "description": "React Component to manage State through reducers using contexts and hooks",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "src/main/js/ReducerContext.js",
@@ -70,29 +70,30 @@
     "assessTypingsTs": "tsc --project config/main/tsconfig.json",
     "assessFlowStyleMain": "eslint --config src/test/typings/flow/.eslintrc.json --color \"src/main/**/*.flow\"",
     "assessTsStyleMain": "eslint --config src/test/typings/ts/.eslintrc.json --color \"src/main/**/*.ts\"",
-    "onlyGradle:assessStyleConfig": "eslint --config ${npm_config_eslintConfigFile} --color \"config/**/*.js\"",
-    "onlyGradle:assessStyleMain": "eslint --config ${npm_config_eslintConfigFile} --color \"src/main/**/*.js\"",
-    "onlyGradle:assessStyleTest": "eslint --config ${npm_config_eslintConfigFile} --color \"src/test/js/**/*.+(js|jsx)\"",
+    "assessStyleConfig": "eslint --color \"config/**/*.js\"",
+    "assessStyleMain": "eslint --color \"src/main/**/*.js\"",
+    "assessStyleTest": "eslint --color \"src/test/js/**/*.+(js|jsx)\"",
     "testTypingsFlow": "flow check --color=always ./config/test/typings",
     "testTypingsTs": "tsc --project config/test/typings/tsconfig.json",
-    "test": "karma start config/test/karma.conf.js --colors"
+    "test": "karma start config/test/karma.conf.js --colors",
+    "check": "echo ==== Linting ==== && npm run assessStyleConfig && npm run assessStyleConfig && npm run assessStyleMain && npm run assessTsStyleMain && npm run assessFlowStyleMain && echo ==== Typings ==== && npm run assessTypingsTs && npm run assessTypingFlow && echo ==== Tests Linting ==== && npm run assessStyleTest && echo ==== Testing ==== && npm run test && echo ==== Typings Testing ==== && npm run testTypingsTs && npm run testTypingsFlow"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
     "@babel/preset-env": "~7.6.0",
     "@babel/preset-react": "~7.0.0",
-    "@typescript-eslint/eslint-plugin": "~2.2.0",
-    "@typescript-eslint/parser": "~2.2.0",
-    "@types/react": "~16.9.2",
+    "@typescript-eslint/eslint-plugin": "~2.9.0",
+    "@typescript-eslint/parser": "~2.9.0",
+    "@types/react": "~16.9.5",
     "babel-eslint": "10.0.3",
     "babel-loader": "~8.0.6",
     "enzyme": "~3.10.0",
-    "enzyme-adapter-react-16": "~1.14.0",
-    "eslint": "~6.3.0",
+    "enzyme-adapter-react-16": "~1.15.1",
+    "eslint": "~6.7.1",
+    "eslint-plugin-base-style-config": "1.0.1",
     "eslint-plugin-import": "~2.18.2",
     "eslint-plugin-flowtype": "~4.3.0",
     "eslint-plugin-react": "~7.14.3",
-    "eslint-plugin-react-hooks": "~2.0.1",
     "flow-bin": "~0.107.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^15.1.1",
@@ -110,7 +111,7 @@
     "karma-webpack": "~4.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "typescript": "~3.6.3",
-    "webpack": "^4.39.3"
+    "typescript": "~3.7.2",
+    "webpack": "~4.39.3"
   }
 }
