--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,28 +1,12 @@
 {
   "extends": [
-    "plugin:react/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-        "jsx": true
-    }
-  },
-  "plugins": [
-    "react"
+    "plugin:base-style-config/react-rules"
   ],
   "rules": {
-    "react/no-multi-comp": "error",
-    "react/no-this-in-sfc": "error",
-    "react/no-unsafe": "error",
-    "react/no-unused-prop-types": "error",
-    "react/no-unused-state": "error",
-    "react/prefer-es6-class": ["error", "never"],
-    "react/prop-types": "off",
-    "semi": ["error", "never"]
-  },
-  "settings":  {
-    "react":  {
-      "version": "detect"
-    }
+    "import/no-default-export": "off",
+    "react/prefer-es6-class": [
+      "error",
+      "never"
+    ]
   }
 }
