## Inception of react-reducer-provider :D - 2.1.0 - April 2020
* Inception :D => Evolution of [react-named-reducer](https://www.npmjs.com/package/react-named-reducer)
  * Allows for `async` reducers.
  * Allows Providers with no name, useful for defining a Singleton Reducer Provider.
  * Adds helper type `Action` which have been useful in several projects.
  * Removes validation of existence of reducer context in favor of performance, is up to the developer to do a good coding and to **guaranteed that names are "paired" between provider, `SyncReducerProvider` or `AsyncReducerProvider`, and consumers, `useReducer`, `useReducerState` or `useReducerDispatcher`**.
  * Deprecates `NamedReducer`, `NamedReducerProps`, `NamedReducerInterface`, `NamedReducerValue`, `useNamedReducer` &`useNamedReducerContext`.
  * Updates Documentation files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,12 +11,15 @@
     "sourceType": "module"
   },
   "plugins": [
-    "base-style-config"
+    "base-style-config",
+    "regex"
   ],
   "root": true,
   "rules": {
     "no-console": "error",
     "no-invalid-this": "error",
+    "import/group-exports": "error",
+    "import/exports-last": "error",
     "quotes":  [
       "error",
       "single"
@@ -24,6 +27,11 @@
     "semi": [
       "error",
       "never"
+    ],
+    "regex/invalid": [
+      "error", [
+        "\"(?!.*')"
+      ]
     ]
   }
 }
