--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-named-reducer",
-  "description": "React Component to easily manage State through reducers using hooks. with typings for Typescript and Flow",
-  "version": "2.0.2",
+  "name": "react-reducer-provider",
+  "description": "Asynchronous/Synchronous React Reducer Provider with Hooks",
+  "version": "2.1.0",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "src/main/js/NamedReducer.js",
@@ -9,41 +9,58 @@
   "files": [
     "src/main/js"
   ],
-  "homepage": "https://gitlab.com/gmullerb/react-named-reducer",
+  "homepage": "https://gitlab.com/gmullerb/react-reducer-provider",
   "repository": {
     "type": "git",
-    "url": "https://github.com/gmullerb/react-named-reducer"
+    "url": "https://github.com/gmullerb/react-reducer-provider"
   },
   "bugs": {
-    "url": "https://gitlab.com/gmullerb/react-named-reducer/issues"
+    "url": "https://gitlab.com/gmullerb/react-reducer-provider/issues"
   },
   "keywords": [
-    "NamedReducer",
+    "SyncReducerProvider",
+    "AsyncReducerProvider",
+    "useReducer",
+    "useReducerState",
+    "useReducerDispatcher",
     "react",
     "reactjs",
     "react js",
+    "asynchronous",
+    "asynchronous react",
+    "asynchronous reducer",
+    "asynchronous flux",
+    "asynchronous redux",
+    "asynchronous dispatcher",
+    "asynchronous hook",
+    "reducer",
+    "react reducer",
+    "react-reducer",
+    "multiple reducer",
+    "state",
+    "dispatcher",
+    "component state",
+    "state management",
+    "state reducer",
     "react-js",
     "react.js",
     "flux",
     "redux",
     "store",
     "action",
-    "reducer",
-    "react reducer",
-    "react-reducer",
-    "state",
-    "dispatcher",
-    "component state",
-    "state management",
-    "state reducer",
     "context",
+    "synchronous react",
+    "synchronous reducer",
+    "synchronous flux",
+    "synchronous redux",
+    "synchronous dispatcher",
     "react context",
     "react-context",
     "React.Context",
+    "React.Provider",
     "react hook",
     "react-hook",
     "hook",
-    "useReducer",
     "useContext",
     "createContext",
     "Context.Consumer",
@@ -76,7 +93,9 @@
     "testTypingsFlow": "flow check --color=always ./config/test/typings",
     "testTypingsTs": "tsc --project config/test/typings/tsconfig.json",
     "test": "karma start config/test/karma.conf.js --colors",
-    "check": "echo ==== Linting ==== && npm run assessStyleConfig && npm run assessStyleConfig && npm run assessStyleMain && npm run assessTsStyleMain && npm run assessFlowStyleMain && echo ==== Typings ==== && npm run assessTypingsTs && npm run assessTypingFlow && echo ==== Tests Linting ==== && npm run assessStyleTest && echo ==== Testing ==== && npm run test && echo ==== Typings Testing ==== && npm run testTypingsTs && npm run testTypingsFlow"
+    "prepack": "echo ==== Build Package ====",
+    "check": "echo ==== Linting ==== && npm run assessStyleConfig && npm run assessStyleConfig && npm run assessStyleMain && npm run assessTsStyleMain && echo ==== Typings ==== && npm run assessTypingsTs && npm run assessTypingsFlow && echo ==== Tests Linting ==== && npm run assessStyleTest && echo ==== Typings Testing ==== && npm run testTypingsTs && npm run testTypingsFlow && echo ==== Testing ==== && npm run test && mkdir -p build && cd build && npm pack ../",
+    "check.all": "npm run check && npm audit"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
@@ -84,9 +103,12 @@
     "@babel/preset-react": "~7.0.0",
     "@typescript-eslint/eslint-plugin": "~2.9.0",
     "@typescript-eslint/parser": "~2.9.0",
+    "@types/enzyme": "^3.10.5",
+    "@types/jasmine": "~3.5.10",
     "@types/react": "~16.9.5",
     "babel-eslint": "10.0.3",
     "babel-loader": "~8.0.6",
+    "delay": "^4.3.0",
     "enzyme": "~3.10.0",
     "enzyme-adapter-react-16": "~1.15.1",
     "eslint": "~6.7.1",
@@ -94,9 +116,10 @@
     "eslint-plugin-import": "~2.18.2",
     "eslint-plugin-flowtype": "~4.3.0",
     "eslint-plugin-react": "~7.14.3",
+    "eslint-plugin-regex": "1.0.0",
     "flow-bin": "~0.107.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^15.1.1",
+    "jsdom": "^16.2.2",
     "jasmine-core": "^3.4.0",
     "jasmine-enzyme": "~7.1.1",
     "karma": "^4.3.0",
@@ -111,7 +134,7 @@
     "karma-webpack": "~4.0.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "typescript": "~3.7.2",
+    "typescript": "^3.8.3",
     "webpack": "~4.39.3"
   }
 }
