--- a/package.json
+++ b/package.json
@@ -83,18 +83,19 @@
     "react": "^16.8.0"
   },
   "scripts": {
-    "assessTypingsFlow": "flow check --color=always ./config/main",
-    "assessTypingsTs": "tsc --project config/main/tsconfig.json",
-    "assessFlowStyleMain": "eslint --config tests/typings/flow/.eslintrc.json --color \"src/**/*.flow\"",
-    "assessTsStyleMain": "eslint --config tests/typings/ts/.eslintrc.json --color \"src/**/*.ts\"",
-    "assessStyleConfig": "eslint --color \"config/**/*.js\"",
-    "assessStyleMain": "eslint --color \"src/**/*.js\"",
-    "assessStyleTest": "eslint --color \"tests/js/**/*.js*\"",
-    "testTypingsFlow": "flow check --color=always ./config/test/typings",
-    "testTypingsTs": "tsc --project config/test/typings/tsconfig.json",
-    "test": "karma start config/test/karma.conf.js --colors",
+    "lint.common": "echo ==== Lint Common ==== && lintspaces --newline --indentation \"spaces\"  ./lib/**/*.* ./readme/**/*.* ./tests/**/*.* ./docs/**/*.* ./*.json ./*.yml ./*.md ./*.sh ./*.txt ./*.properties ./*.gradle ./.gitignore ./.npmignore",
+    "lint.config": "echo ==== Lint Config ==== && eslint --color \"config/**/*.js\"",
+    "lint.main": "echo ==== Lint Main Source ==== && eslint --color \"src/**/*.js\"",
+    "lint.flow": "echo ==== Lint Flow code ==== && eslint --config tests/typings/flow/.eslintrc.json --color \"src/**/*.flow\"",
+    "lint.ts": "echo ==== Lint TS Code ==== && eslint --config tests/typings/ts/.eslintrc.json --color \"src/**/*.ts\"",
+    "lint.test": "echo ==== Lint Test source ==== && eslint --color \"tests/js/**/*.js*\"",
+    "transpile.flow": "echo ==== Transpile Flow ==== && flow check --color=always ./config/main",
+    "transpile.ts": "echo ==== Transpile Typescript ==== && tsc --project config/main/tsconfig.json",
+    "test.flow": "echo ==== Test Flow ==== && flow check --color=always ./config/test/typings",
+    "test.ts": "echo ==== Test Typescript ==== && tsc --project config/test/typings/tsconfig.json",
+    "test": "echo ==== Test ==== && karma start config/test/karma.conf.js --colors",
     "prepack": "echo ==== Build Package ====",
-    "check": "echo ==== Linting ==== && npm run assessStyleConfig && npm run assessStyleConfig && npm run assessStyleMain && npm run assessTsStyleMain && echo ==== Typings ==== && npm run assessTypingsTs && npm run assessTypingsFlow && echo ==== Tests Linting ==== && npm run assessStyleTest && echo ==== Typings Testing ==== && npm run testTypingsTs && npm run testTypingsFlow && echo ==== Testing ==== && npm run test && mkdir -p build && cd build && npm pack ../",
+    "check": "npm run lint.common && npm run lint.config && npm run lint.main && npm run lint.flow && npm run lint.ts && npm run transpile.ts && npm run transpile.flow && npm run lint.test && npm run test.ts && npm run test.flow && npm run test && mkdir -p build && cd build && npm pack ../",
     "check.all": "npm run check && npm audit"
   },
   "devDependencies": {
@@ -132,6 +133,7 @@
     "karma-mocha-reporter": "~2.2.5",
     "karma-notify-reporter": "1.1.0",
     "karma-webpack": "~4.0.2",
+    "lintspaces-cli": "^0.7.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "typescript": "^3.8.3",
