--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reducer-provider",
   "description": "Asynchronous/Synchronous React Reducer Provider with Hooks",
-  "version": "3.0.0-beta",
+  "version": "3.0.0",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "src/ReducerProvider.js",
