--- a/config/.eslintrc.json
+++ b/config/.eslintrc.json
@@ -1,8 +1,9 @@
 {
-  "extends": [
-    "eslint:recommended"
-  ],
   "rules": {
-    "no-console": ["error", { "allow": ["error", "info"] } ]
+    "no-console": [
+      "error", {
+        "allow": ["error", "info"]
+      }
+     ]
   }
 }
