--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "react-reducer-provider",
   "description": "Asynchronous/Synchronous React Reducer Provider with Hooks",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
-  "main": "src/ReducerProvider.js",
-  "types": "src/ReducerProvider.d.ts",
+  "main": "cjs/react-reducer-provider.js",
+  "module": "src/react-reducer-provider.js",
+  "types": "src/react-reducer-provider.d.ts",
   "files": [
     "src"
+  ],
+  "sideEffects": [
+    "src/ReducerProvider.js"
   ],
   "homepage": "https://gitlab.com/gmullerb/react-reducer-provider",
   "repository": {
@@ -88,22 +92,26 @@
     "lint.main": "echo ==== Lint Main Source ==== && eslint --color \"src/**/*.js\"",
     "lint.flow": "echo ==== Lint Flow code ==== && eslint --config tests/typings/flow/.eslintrc.json --color \"src/**/*.flow\"",
     "lint.ts": "echo ==== Lint TS Code ==== && eslint --config tests/typings/ts/.eslintrc.json --color \"src/**/*.ts\"",
-    "lint.test": "echo ==== Lint Test source ==== && eslint --color \"tests/js/**/*.js*\"",
+    "lint.test": "echo ==== Lint Test source ==== && eslint --color \"tests/js/**/*.+(js|jsx)\"",
     "transpile.flow": "echo ==== Transpile Flow ==== && flow check --color=always ./config/main",
     "transpile.ts": "echo ==== Transpile Typescript ==== && tsc --project config/main/tsconfig.json",
     "test.flow": "echo ==== Test Flow ==== && flow check --color=always ./config/test/typings",
     "test.ts": "echo ==== Test Typescript ==== && tsc --project config/test/typings/tsconfig.json",
+    "pretest": "npm run build.cjs",
     "test": "echo ==== Test ==== && karma start config/test/karma.conf.js --colors",
-    "prepack": "echo ==== Build Package ====",
+    "build.cjs": "echo ==== Build CommonJS Module ==== && rollup --config ./config/main/rollup.config.js",
+    "prepack": "npm run build.cjs && echo ==== Build Package ====",
     "check": "npm run lint.common && npm run lint.config && npm run lint.main && npm run lint.flow && npm run lint.ts && npm run transpile.ts && npm run transpile.flow && npm run lint.test && npm run test.ts && npm run test.flow && npm run test && mkdir -p build && cd build && npm pack ../",
     "check.all": "npm run check && npm audit"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "~7.6.0",
     "@babel/preset-env": "~7.6.0",
     "@babel/preset-react": "~7.0.0",
-    "@typescript-eslint/eslint-plugin": "~2.9.0",
-    "@typescript-eslint/parser": "~2.9.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "@types/enzyme": "^3.10.5",
     "@types/jasmine": "~3.5.10",
     "@types/react": "~16.9.5",
@@ -112,12 +120,13 @@
     "delay": "^4.3.0",
     "enzyme": "~3.10.0",
     "enzyme-adapter-react-16": "~1.15.1",
-    "eslint": "~6.7.1",
-    "eslint-plugin-base-style-config": "1.0.1",
+    "eslint": "^7.0.0",
+    "eslint-plugin-base-style-config": "^2.1.0",
     "eslint-plugin-import": "~2.18.2",
     "eslint-plugin-flowtype": "~4.3.0",
+    "eslint-plugin-unused-imports": "^0.1.3",
     "eslint-plugin-react": "~7.14.3",
-    "eslint-plugin-regex": "1.0.0",
+    "eslint-plugin-regex": "^1.1.0",
     "flow-bin": "~0.107.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^16.2.2",
@@ -136,6 +145,8 @@
     "lintspaces-cli": "^0.7.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "rollup": "^2.8.2",
+    "rollup-plugin-cleanup": "^1.0.1",
     "typescript": "^3.8.3",
     "webpack": "~4.39.3"
   }
