--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reducer-provider",
   "description": "Asynchronous/Synchronous React Reducer Provider with Hooks",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "cjs/react-reducer-provider.js",
@@ -102,7 +102,8 @@
     "build.cjs": "echo ==== Build CommonJS Module ==== && rollup --config ./config/main/rollup.config.js",
     "prepack": "npm run build.cjs && echo ==== Build Package ====",
     "check": "npm run lint.common && npm run lint.config && npm run lint.main && npm run lint.flow && npm run lint.ts && npm run transpile.ts && npm run transpile.flow && npm run lint.test && npm run test.ts && npm run test.flow && npm run test && mkdir -p build && cd build && npm pack ../",
-    "check.all": "npm run check && npm audit"
+    "check.all": "npm run check && npm audit",
+    "prepublishOnly": "npm run check"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -119,7 +120,7 @@
     "babel-loader": "~8.0.6",
     "delay": "^4.3.0",
     "enzyme": "~3.10.0",
-    "enzyme-adapter-react-16": "~1.15.1",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.0.0",
     "eslint-plugin-base-style-config": "^2.1.0",
     "eslint-plugin-import": "~2.18.2",
@@ -133,8 +134,9 @@
     "jasmine-core": "^3.4.0",
     "jasmine-enzyme": "~7.1.1",
     "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jsdom-launcher": "^7.1.0",
+    "karma-jsdom-launcher": "^8.0.2",
     "karma-html-reporter": "~0.2.7",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
@@ -143,8 +145,8 @@
     "karma-notify-reporter": "1.1.0",
     "karma-webpack": "~4.0.2",
     "lintspaces-cli": "^0.7.1",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rollup": "^2.8.2",
     "rollup-plugin-cleanup": "^1.0.1",
     "typescript": "^3.8.3",
