--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reducer-provider",
-  "description": "Asynchronous/Synchronous React Reducer Provider with Hooks",
-  "version": "3.3.0",
+  "description": "Asynchronous/Synchronous React Reducer/Mapper Provider with Hooks",
+  "version": "3.4.0",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "cjs/react-reducer-provider.js",
@@ -11,7 +11,7 @@
     "src"
   ],
   "sideEffects": [
-    "src/ReducerProvider.js"
+    "src/Providers.js"
   ],
   "homepage": "https://gitlab.com/gmullerb/react-reducer-provider",
   "repository": {
