--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+# Copyright (c) 2020 Gonzalo Müller Bravo
 image: registry.gitlab.com/gmullerb/basecode-react-ts/debian-node-chromium-xvfb:9.12-14.2.0-73.0-1.19.2
 
 cache:
@@ -76,6 +77,7 @@ tests-typings:
 tests:
   stage: test
   script:
+    - export CHROME_BIN='chromium'
     - npm run lint.test
     - npm test
   cache:
