--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-reducer-provider",
   "description": "Asynchronous/Synchronous React Reducer/Mapper Provider with Hooks",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "license": "MIT",
   "author": "Gonzalo Müller Bravo",
   "main": "cjs/react-reducer-provider.js",
@@ -92,15 +92,18 @@
     "lint.common": "echo ==== Lint Common ==== && lintspaces --newline --indentation \"spaces\"  ./lib/**/*.* ./readme/**/*.* ./tests/**/*.* ./docs/**/*.* ./*.json ./*.yml ./*.md ./*.sh ./*.txt ./*.properties ./*.gradle ./.gitignore ./.npmignore",
     "lint.config": "echo ==== Lint Config ==== && eslint --color \"config/**/*.js\"",
     "lint.main": "echo ==== Lint Main Source ==== && eslint --color \"src/**/*.js\"",
+    "lint.main.fix": "echo ==== Lint Main Source ==== && eslint --fix --color \"src/**/*.js\"",
     "lint.flow": "echo ==== Lint Flow code ==== && eslint --config tests/typings/flow/.eslintrc.json --color \"src/**/*.flow\"",
     "lint.ts": "echo ==== Lint TS Code ==== && eslint --config tests/typings/ts/.eslintrc.json --color \"src/**/*.ts\"",
     "lint.test": "echo ==== Lint Test source ==== && eslint --color \"tests/js/**/*.+(js|jsx)\"",
+    "lint.test.fix": "echo ==== Lint Test source ==== && eslint --fix --color \"tests/js/**/*.+(js|jsx)\"",
     "transpile.flow": "echo ==== Transpile Flow ==== && flow check --color=always ./config/main",
     "transpile.ts": "echo ==== Transpile Typescript ==== && tsc --project config/main/tsconfig.json",
     "test.flow": "echo ==== Test Flow ==== && flow check --color=always ./config/test/typings",
-    "test.ts": "echo ==== Test Typescript ==== && tsc --project config/test/typings/tsconfig.json",
+    "test.ts": "echo ==== Test Typescript ==== && tsc --extendedDiagnostics --project config/test/typings/tsconfig.json",
     "pretest": "npm run build.cjs",
     "test": "echo ==== Test ==== && karma start config/test/karma.conf.js --colors",
+    "test.single": "echo ==== Test ==== && SINGLE_TEST=1 karma start config/test/karma.conf.js --colors",
     "build.cjs": "echo ==== Build CommonJS Module ==== && rollup --config ./config/main/rollup.config.js",
     "prepack": "npm run build.cjs && echo ==== Build Package ====",
     "check": "npm run lint.common && npm run lint.config && npm run lint.main && npm run lint.flow && npm run lint.ts && npm run transpile.ts && npm run transpile.flow && npm run lint.test && npm run test.ts && npm run test.flow && npm run test && mkdir -p build && cd build && npm pack ../",
@@ -123,7 +126,7 @@
     "enzyme": "~3.10.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.0.0",
-    "eslint-plugin-base-style-config": "^2.1.0",
+    "eslint-plugin-base-style-config": "^2.5.1",
     "eslint-plugin-import": "~2.18.2",
     "eslint-plugin-flowtype": "~4.3.0",
     "eslint-plugin-unused-imports": "^0.1.3",
